src/go-src-converted/cmd/go/testdata/src/syntaxerror/x.cs
// package p -- go2cs converted at 2020 August 29 10:02:04 UTC
// import "cmd/go/testdata/src.p" ==> using p = go.cmd.go.testdata.src.p_package
// Original source: C:\Go\src\cmd\go\testdata\src\syntaxerror\x.go
    }

